<resources>
    <string name="app_name">Not Only Notes</string>
    <string name="edit_icon">Edit</string>
    <string name="search_icon">Edit</string>
    <string name="more_icon">Edit</string>
    <string name="brandName_text">Notes</string>
    <string name="dailyNotes_text">Daily Notes</string>
    <string name="dailyNotesAbout_text">Take notes, reminders, set targets, collect resources and secure privacy</string>
    <string name="edit_text">Edit</string>
    <string name="all">All</string>
    <string name="folder">Folder</string>
<!--<<<<<<< HEAD-->
    <string name="not_only_notes">Not Only Notes</string>
<!--=======-->
<!--&gt;>>>>>> 706b965e2764b43a3f70dd09d131a5429b94c807-->
</resources>