<?xml version="1.0" encoding="utf-8"?>
<!--<<<<<<< HEAD-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="0dp"
    android:layout_height="65dp"
    android:background="@color/mainHeaderBgColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="41dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13.5dp"
        android:contentDescription="@string/edit_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/brandName"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/brandName_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_text"
        android:layout_width="44dp"
        android:layout_height="29dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/edit_text"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toEndOf="@+id/brandName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/more_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_icon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/search_icon"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.button.MaterialButton
    android:id="@+id/button"
    android:layout_width="127dp"
    android:layout_height="57dp"
    android:layout_marginTop="12dp"
    android:text="@string/all"
    app:backgroundTint="@color/buttonAllColor"
    app:cornerRadius="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:fontFamily="@font/montserrat"
    app:layout_constraintHorizontal_bias="0.221"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button2"
    android:layout_width="127dp"
    android:layout_height="57dp"
    android:layout_marginTop="12dp"
    android:text="@string/folder"
    android:fontFamily="@font/montserrat"
    app:backgroundTint="@color/buttonAllColor"
    app:cornerRadius="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.778"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

<ImageView
    android:id="@+id/imageView5"
    android:layout_width="282dp"
    android:layout_height="261dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.379"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
    app:layout_constraintVertical_bias="0.302"
    app:srcCompat="@drawable/ic_empty_icon" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button3"
    android:layout_width="291dp"
    android:layout_height="53dp"
    android:layout_marginTop="516dp"
    android:fontFamily="@font/montserrat"
    android:text="Get STARTED"
    app:backgroundTint="#429A3F"
    app:cornerRadius="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="177dp"
    android:layout_height="44dp"
    android:fontFamily="@font/montserrat_bold"
    android:text="@string/dailyNotes_text"
    android:textColor="@color/black"
    android:textSize="28sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.542"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView5"
    app:layout_constraintVertical_bias="0.091" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="347dp"
    android:layout_height="65dp"
    android:layout_marginTop="12dp"
    android:fontFamily="@font/montserrat"
    android:text="@string/dailyNotesAbout_text"
    android:textAlignment="center"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />
<!--=======-->
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/mainHeaderBgColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13.5dp"
            android:contentDescription="@string/edit_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/brandName"
            android:layout_width="82dp"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/brandName_text"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="44dp"
            android:layout_height="29dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/edit_text"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintStart_toEndOf="@+id/brandName"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/more_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more_icon" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/search_icon"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:text="@string/all"
        app:backgroundTint="@color/buttonAllColor"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/montserrat"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:text="@string/folder"
        android:fontFamily="@font/montserrat"
        app:backgroundTint="@color/buttonAllColor"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="282dp"
        android:layout_height="261dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.302"
        app:srcCompat="@drawable/ic_empty_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="291dp"
        android:layout_height="53dp"
        android:layout_marginTop="516dp"
        android:fontFamily="@font/montserrat"
        android:text="Get STARTED"
        app:backgroundTint="#429A3F"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="44dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/dailyNotes_text"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="347dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/dailyNotesAbout_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
<!--&gt;>>>>>> 706b965e2764b43a3f70dd09d131a5429b94c807-->


</androidx.constraintlayout.widget.ConstraintLayout>